# markItDown-custom

./: .env  pyproject.toml
samples/: image_test.xlsx  sample.docx  sample.pptx  sample.xlsx
src/markitdown/: _base_converter.py
src/markitdown/converters/: _pdf_converter.py  _pptx_converter.py
tests/: test_pdf.ipynb  test_pdf.py  test_pptx.ipynb
